--- a/pipeline/cloudbuild.yaml
+++ b/pipeline/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  # Build the Docker image with a specified version
+  # Build the Docker image with a specified versions
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/nodejs:$_VERSION', './gcp_nodejs_app/']
 
