--- a/pipeline/cloudbuild.yaml
+++ b/pipeline/cloudbuild.yaml
@@ -1,15 +1,23 @@
 steps:
-  # Build the Docker image with a specified versions
+  # Build the Docker image with both version and latest tags
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/nodejs:$_VERSION', './gcp_nodejs_app/']
+    args: [
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/nodejsapp:$_VERSION',  # Tag with the version
+      '-t', 'gcr.io/$PROJECT_ID/nodejsapp:latest',     # Additional "latest" tag
+      './gcp_nodejs_app/'
+    ]
 
-  # Push the Docker image to Google Container Registry
+  # Push both tags to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/nodejs:$_VERSION']
+    args: ['push', 'gcr.io/$PROJECT_ID/nodejsapp:$_VERSION']
+
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/nodejsapp:latest']
 
 images:
-  - 'gcr.io/$PROJECT_ID/nodejs:${_VERSION}'  # Specify the same tag for the built image
-
+  - 'gcr.io/$PROJECT_ID/nodejsapp:${_VERSION}'
+  - 'gcr.io/$PROJECT_ID/nodejsapp:latest'  # Include the "latest" tag in the images list
 
 logsBucket: 'terraformbackendmysqlapplication'
 options:
