--- a/.github/workflows/deploy-to-gcr.yml
+++ b/.github/workflows/deploy-to-gcr.yml
@@ -20,34 +20,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Write GCP credentials to a file
-      - name: Write GCP credentials
-        run: echo "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-key.json
-
-      # Step 3: Authenticate to Google Cloud
-      - name: Set up Google Cloud credentials
+      # Step 2: Authenticate to Google Cloud
+      - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
           credentials_json: "${{ secrets.GCP_SA_KEY }}"  # Use GCP service account JSON key
 
-      # Step 4: Configure Docker to use GCR
+      # Step 3: Configure Docker for GCR
       - name: Configure Docker for GCR
         run: |
-          cat $HOME/gcp-key.json | docker login -u _json_key --password-stdin https://gcr.io
+          gcloud auth configure-docker --quiet
 
-      # Step 5: Build Docker image
+      # Step 4: Build Docker image
       - name: Build Docker image
         run: |
           docker build -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} \
                        -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest \
                        -f ./gcp_nodejs_app/Dockerfile ./gcpnodeapp
 
-      # Step 6: Push Docker image to GCR
+      # Step 5: Push Docker image to GCR
       - name: Push Docker image to GCR
         run: |
           docker push gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
           docker push gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest
-
-      # Step 7: Clean up credentials
-      - name: Remove GCP credentials
-        run: rm -f $HOME/gcp-key.json
