--- a/.github/workflows/deploy-to-gcr.yml
+++ b/.github/workflows/deploy-to-gcr.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           docker build -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} \
                        -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest \
-                       -f ./gcp_nodejs_app/Dockerfile ./gcpnodeapp
+                       -f ./gcp_nodejs_app/Dockerfile ./gcp_nodejs_app
 
       # Step 5: Push Docker image to GCR
       - name: Push Docker image to GCR
